# overlayaz

./: CMakeLists.txt  README.md  overlayaz.desktop
example/: dylewska.jpg.ovlz
icons/: INFO  icons.xml
src/: CMakeLists.txt  conf.c  conf.h  dialog-about.c  dialog-about.h  dialog-alt.c  dialog-alt.h  dialog-export.c  dialog-export.h  dialog-info.c  dialog-info.h  dialog-ratio.c  dialog-ratio.h  dialog.c  dialog.h  draw.c  draw.h  exif.c  exif.h  export.c  export.h  file.c  file.h  font.c  font.h  geo.c  geo.h  grid-helper.c  grid-helper.h  icon.c  icon.h  icon.rc  location.h  main.c  marker-iter.c  marker-iter.h  marker-list.c  marker-list.h  marker.c  marker.h  (+37 more)
src/geodesic/: LICENSE.txt
test/: CMakeLists.txt  test_font.c  test_overlayaz.c
